<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <data>

        <variable
            name="quantity"
            type="int" />

        <variable
            name="onIncreaseClick"
            type="android.view.View.OnClickListener" />

        <variable
            name="onDecreaseClick"
            type="android.view.View.OnClickListener" />

    </data>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/shape_quantity_selector_bg">

        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/btn_quantity_minus"
            style="@style/QuantityButtonStyle"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:onClick="@{onDecreaseClick}"
            android:text="@string/minus"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toStartOf="@id/textview_quantity"
            app:layout_constraintHorizontal_chainStyle="packed"
            app:layout_constraintHorizontal_weight="1"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/textview_quantity"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:paddingVertical="12dp"
            android:text="@{String.valueOf(quantity)}"
            android:textAlignment="center"
            android:textColor="@color/gray_55"
            android:textSize="22sp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toStartOf="@id/btn_quantity_plus"
            app:layout_constraintHorizontal_weight="1"
            app:layout_constraintStart_toEndOf="@id/btn_quantity_minus"
            app:layout_constraintTop_toTopOf="parent"
            tools:text="0" />

        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/btn_quantity_plus"
            style="@style/QuantityButtonStyle"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:onClick="@{onIncreaseClick}"
            android:text="@string/plus"
            app:layout_constraintBottom_toBottomOf="@id/textview_quantity"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_weight="1"
            app:layout_constraintStart_toEndOf="@id/textview_quantity"
            app:layout_constraintTop_toTopOf="@id/textview_quantity" />

    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>
