<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <data>

        <import type="android.view.View" />

        <variable
            name="product"
            type="woowacourse.shopping.presentation.model.ProductUiModel" />

        <variable
            name="vm"
            type="woowacourse.shopping.presentation.view.detail.DetailViewModel" />

        <variable
            name="eventHandler"
            type="woowacourse.shopping.presentation.view.detail.DetailEventHandler" />

    </data>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <Toolbar
            android:id="@+id/toolbar_detail"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:background="@color/gray_55"
            android:contentInsetEnd="12dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent">

            <ImageButton
                android:id="@+id/btn_close"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="end"
                android:background="@color/transparent"
                android:contentDescription="@null"
                android:src="@drawable/ic_close"
                app:tint="@color/white" />
        </Toolbar>

        <ImageView
            android:id="@+id/image_view_detail_product"
            imageUrl="@{product.imageUrl}"
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:contentDescription="@null"
            android:scaleType="centerCrop"
            app:layout_constraintDimensionRatio="1:0.8"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/toolbar_detail" />

        <TextView
            android:id="@+id/text_view_detail_product_name"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_margin="20dp"
            android:text="@{product.name}"
            android:textColor="@color/black"
            android:textSize="24sp"
            android:textStyle="bold"
            app:layout_constraintBottom_toTopOf="@id/divider"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/image_view_detail_product"
            tools:text="나이키 에어포스" />

        <com.google.android.material.divider.MaterialDivider
            android:id="@+id/divider"
            android:layout_width="0dp"
            android:layout_height="1dp"
            android:layout_marginTop="16dp"
            app:layout_constraintBottom_toTopOf="@id/text_view_detail_price"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/text_view_detail_product_name" />


        <TextView
            android:id="@+id/text_view_detail_price"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_marginTop="16dp"
            android:text="@{@string/product_price_format(product.price * vm.product.quantity)}"
            android:textAlignment="textEnd"
            android:textColor="@color/black"
            android:textSize="20sp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/divider"
            tools:text="10,000원" />

        <include
            android:id="@+id/detail_item_counter"
            layout="@layout/view_select_quantity"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="120dp"
            app:layout_constraintBottom_toBottomOf="@id/text_view_detail_price"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@id/text_view_detail_price"
            app:layout_constraintTop_toTopOf="@id/text_view_detail_price"
            app:product="@{product}"
            app:quantity="@{vm.product.quantity}" />

        <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/view_detail_last_viewed"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="18dp"
            android:layout_marginTop="32dp"
            android:background="@drawable/shape_bg_border"
            android:onClick="@{() -> eventHandler.onRecentItemSelected(vm.lastViewedProduct)}"
            android:paddingBottom="16dp"
            android:visibility="@{(vm.lastViewedProduct == null || vm.lastViewedProduct.id == product.id) ? View.GONE : View.VISIBLE}"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/text_view_detail_price">

            <TextView
                android:id="@+id/text_view_detail_last_viewed_title"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_margin="16dp"
                android:text="@string/detail_last_viewed_text"
                android:textColor="@color/mint"
                android:textSize="12sp"
                android:textStyle="bold"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <TextView
                android:id="@+id/text_view_detail_last_viewed"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                android:text="@{vm.lastViewedProduct.name}"
                android:textColor="@color/gray_55"
                android:textSize="18sp"
                app:layout_constraintEnd_toEndOf="@id/text_view_detail_last_viewed_title"
                app:layout_constraintStart_toStartOf="@id/text_view_detail_last_viewed_title"
                app:layout_constraintTop_toBottomOf="@id/text_view_detail_last_viewed_title"
                tools:text="잉어킹" />
        </androidx.constraintlayout.widget.ConstraintLayout>

        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/btn_add_cart"
            style="?attr/selectableItemBackground"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:background="@color/mint"
            android:onClick="@{() -> vm.addToCart()}"
            android:text="@string/detail_add_cart_button_text"
            android:textColor="@color/white"
            android:textSize="20sp"
            android:textStyle="bold"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent" />
    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>
